src/srv/snapshots/walls_rust__srv__parser__tests__snapshots-193.snap
---
source: src/srv/parser_test.rs
expression: "&parse(\"#units d=f inch=2\")"
---
items:
  - loc: "#units d=f inch=2"
    locs:
      directive: "#units"
    options:
      - loc: d=f
        locs:
          option: d
          unit: f
        option: PrimaryDistanceUnit
        unit: Feet
      - correction:
          unit: Meters
          value: 2
        loc: inch=2
        locs:
          correction: "2"
          option: inch
        option: HeightAdjustment
    type: UnitsDirective
