src/srv/snapshots/walls_rust__srv__parser__tests__snapshots-196.snap
---
source: src/srv/parser_test.rs
expression: "&parse(\"#units inch=-2q-\")"
---
INVALID:
  items:
    - INVALID:
        loc: "#units inch=-2q-"
        locs:
          directive: "#units"
        options:
          - INVALID:
              correction: "-2q-"
              loc: inch=-2q
              locs:
                correction: "-2q"
                option: inch
              option: HeightAdjustment
            issues:
              - 0
        type: UnitsDirective
issues:
  - code: EINVALIDLENGTHUNIT
    loc: q
    message: Invalid length unit
    severity: Error
  - code: EUNEXPECTED
    loc: "-"
    message: Unexpected text
    severity: Error
