src/srv/snapshots/walls_rust__srv__parser__tests__snapshots-197.snap
---
source: src/srv/parser_test.rs
expression: "&parse(\"#units inch=-2f-\")"
---
INVALID:
  items:
    - loc: "#units inch=-2f-"
      locs:
        directive: "#units"
      options:
        - correction:
            unit: Feet
            value: -2
          loc: inch=-2f
          locs:
            correction: "-2f"
            option: inch
          option: HeightAdjustment
      type: UnitsDirective
issues:
  - code: EUNEXPECTED
    loc: "-"
    message: Unexpected text
    severity: Error
