src/srv/snapshots/walls_rust__srv__parser__tests__snapshots-199.snap
---
source: src/srv/parser_test.rs
expression: "&parse(\"#units case=\")"
---
INVALID:
  items:
    - INVALID:
        loc: "#units case="
        locs:
          directive: "#units"
        options:
          - INVALID:
              locs:
                option: case
              option: StationNameCase
            issues:
              - 0
        type: UnitsDirective
issues:
  - code: EMISSINGVALUE
    loc: ""
    message: Missing case conversion
    severity: Error
