src/srv/snapshots/walls_rust__srv__parser__tests__snapshots-2.snap
---
source: src/srv/parser_test.rs
expression: "&parse(\"#units order=dva\")"
---
items:
  - loc: "#units order=dva"
    locs:
      directive: "#units"
    options:
      - loc: order=dva
        locs:
          option: order
          order: dva
        option: CompassAndTapeOrder
        order:
          - Distance
          - Inclination
          - Azimuth
    type: UnitsDirective
