src/srv/snapshots/walls_rust__srv__parser__tests__snapshots-200.snap
---
source: src/srv/parser_test.rs
expression: "&parse(\"#units case=l\")"
---
items:
  - loc: "#units case=l"
    locs:
      directive: "#units"
    options:
      - conversion: Lower
        loc: case=l
        locs:
          conversion: l
          option: case
        option: StationNameCase
    type: UnitsDirective
